adl-frontend/src/test/resources/unit/error/syntactic/simple/Primitive2.adl
primitive simple.Primitive2 {
	src my.c;	
}